Fix: remove overflow property form info-text in input-field

--- a/website/components/01-atoms/input-field/input-field.scss
+++ b/website/components/01-atoms/input-field/input-field.scss
@@ -37,7 +37,7 @@
 			top: 0;
 			right: 0;
 			display: inline-block;
-			padding: 4px;
+			padding: 2px;
 			line-height: 1;
 			text-align: center;
 			color: $white-100;
@@ -50,11 +50,12 @@
 
 		&__text {
 			position: absolute;
-			bottom: calc(100% + 8px);
+			top: calc(24px);
 			right: 0;
 			background-color: $black-100;
 			color: $white-100;
 			max-width: 240px;
+			z-index: 25;
 			display: none;
 			padding: 8px;
 			border-radius: 4px;
