--- a/website/components/03-organisms/order/order.scss
+++ b/website/components/03-organisms/order/order.scss
@@ -52,7 +52,6 @@
 
 		&__forms {
 			width: 100%;
-			overflow-y: scroll;
 			padding-top: 48px;
 		}
 
