--- a/website/styles/configs/typography.scss
+++ b/website/styles/configs/typography.scss
@@ -124,8 +124,9 @@ h1, h2, h3, h4, p, a, li, td, label, input {
 	&__info, .info {
 
 		&__symbol {
-			font-size: 6px !important;
+			font-size: 8px !important;
 			line-height: 1;
+			font-weight: 700;
 		}
 
 	}
